--- a/hexlet_django_blog/templates/articles/index.html
+++ b/hexlet_django_blog/templates/articles/index.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}"{% endif %}>
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <h1>Список статей</h1>
     {% for article in articles %}
         <h2><a href="{% url 'article_id' article.id %}">{{ article.name }}</a></h2>
         <div>{{ article.body|slice:":200" }}</div>
+        <p><a href="{% url 'articles_update' id=article.id %}">Редактировать статью</a></p>
     {% endfor %}
 {% endblock %}
