--- a/hexlet_django_blog/templates/base.html
+++ b/hexlet_django_blog/templates/base.html
@@ -10,6 +10,7 @@
             <li><a href="/">Главная</a></li>
             <li><a href="/about/">О проекте</a></li>
             <li><a href="/articles/">Статьи</a></li>
+            <li><a href="/articles/create/">Добавить статью</a></li>
         </ul>
     {% endblock %}
 </div>
