--- a/hexlet_django_blog/templates/articles/index.html
+++ b/hexlet_django_blog/templates/articles/index.html
@@ -15,5 +15,9 @@
         <h2><a href="{% url 'article_id' article.id %}">{{ article.name }}</a></h2>
         <div>{{ article.body|slice:":200" }}</div>
         <p><a href="{% url 'articles_update' id=article.id %}">Редактировать статью</a></p>
+        <form action="{% url 'articles_delete' article.id %}" method="post">
+            {% csrf_token %}
+            <input type="submit" value="Удалить">
+        </form>
     {% endfor %}
 {% endblock %}
